<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="click_to_create_a_routine">click to create a routine</string>
    <string name="select_a_routine">Select a Routine</string>
    <string name="create_a_new_routine">Create a new routine</string>
    <string name="back">back</string>
    <string name="routines">routines</string>
    <string name="todo">TODO</string>
    <string name="no_favourites">NO FAVOURITES!</string>
    <string name="click_the_button_below_to_add_routines">click the \'+\' button below to add routines</string>
    <string name="my_smart_home">My Smart Home</string>
    <string name="add_your_favourite_routines_for_easy_access_here">Add your favourite routines for easy access here</string>
    <string name="add_action">Add Action</string>
    <string name="add_event">Add_Event</string>
    <string name="cancel">cancel</string>
    <string name="when">When</string>
    <string name="it_s_after_sunset_at_location">It\'s after sunset at Location</string>
    <string name="select_an_event">Select an Event</string>
    <string name="the_time_is_time">The time is Time</string>
    <string name="it_s_before_sunrise_at_location">it\'s before sunrise at Location</string>
    <string name="it_s_after_sunrise_at_locatio">It\'s after sunrise at Locatio</string>
    <string name="it_s_before_sunset_at_location">It\'s before sunset at Location</string>
    <string name="it_is_sunset_at_location">It is sunset at location</string>
    <string name="it_is_sunrise_at_location">It is sunrise at location</string>
    <string name="it_s_15_minutes_before_sunset_at_location">It\'s 15 minutes before sunset at location</string>
    <string name="it_s_15_minutes_after_sunset_at_location">It\'s 15 minutes after sunset at location</string>
    <string name="it_s_15_minutes_before_sunrise_at_location">It\'s 15 minutes before sunrise at location</string>
    <string name="it_s_15_minutes_after_sunrise_at_location">It\'s 15 minutes after sunrise at location</string>
    <string name="notifications">Notifications</string>
    <string name="notification">notification</string>
    <string name="things">THINGS</string>
    <string name="scenes">SCENES</string>
    <string name="routine">ROUTINES</string>
    <string name="select_a_thing">Select a Thing</string>
    <string name="enter_a_value">Enter a value.</string>
    <string name="value">value</string>
    <string name="cancelCapitol">CANCEL</string>
    <string name="ok">OK</string>
    <string name="creating_new_routine">Creating new Routine.</string>
    <string name="active">Active</string>
    <string name="enter_your_notification_text_here">Enter your notification text here</string>
    <string name="select_an_action">Select an Action</string>
</resources>