<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="200dp"
    android:layout_gravity="center"
    android:background="#F1F8E9">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_a_value"
        android:textSize="25sp"
        android:textStyle="bold" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:autofillHints="value"
        android:textColorHint="@color/black"
        android:hint="@string/value"
        android:inputType="text"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/cancelCapitol" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:onClick="okButton"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="21dp"
        android:layout_toEndOf="@+id/button2"
        android:text="@string/ok" />

</RelativeLayout>