<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fitsSystemWindows="false"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:background="#F7A88815"
        android:gravity="center"
        android:text="@string/my_smart_home"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_anchorGravity="center" />

    <TextView
        android:layout_width="375dp"
        android:layout_height="99dp"
        android:textAlignment="center"
        android:layout_marginVertical="310dp"
        android:text="@string/add_your_favourite_routines_for_easy_access_here"

        android:textSize="28sp" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar2"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        app:backgroundTint="#B0FCE4EC"
        app:fabAnimationMode="scale"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:contentDescription="@string/routines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginVertical="100dp"
        android:layout_marginHorizontal="25dp"
        android:clickable="true"
        android:scaleX="1"
        android:scaleY="1"
        android:backgroundTint="#1E88E5"
        app:srcCompat="@android:drawable/ic_input_add"
        app:tint="@color/white"
        android:focusable="true" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="173dp"
        app:tint="@color/black"
        android:layout_height="162dp"
        app:srcCompat="@android:drawable/btn_star"
        android:layout_marginVertical="90dp"
        android:layout_marginHorizontal="100dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_favourites"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_anchorGravity="center"
        android:layout_marginVertical="250dp"
        android:layout_marginHorizontal="60dp"
        />

    <TextView
        android:layout_width="374dp"
        android:layout_height="99dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="410dp"
        android:text="@string/click_the_button_below_to_add_routines"
        android:textAlignment="center"
        android:textSize="28sp" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>