<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fitsSystemWindows="false"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/my_smart_home"
        android:textColor="@color/white"
        android:background="#F7A88815"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_anchorGravity="center" />

    <TextView
        android:layout_width="411dp"
        android:layout_height="48dp"
        android:layout_marginVertical="60dp"
        android:background="#E0F2F1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/active"
        android:textColor="#201F1F"
        android:textSize="25sp"
        android:textStyle="bold" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar2"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        app:backgroundTint="#B0FCE4EC"
        app:fabAnimationMode="scale"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="100dp"
        android:backgroundTint="#1E88E5"
        android:clickable="true"
        android:contentDescription="@string/routines"
        android:focusable="true"
        android:scaleX="1"
        android:scaleY="1"
        app:srcCompat="@android:drawable/ic_input_add"
        app:tint="@color/white" />



</androidx.coordinatorlayout.widget.CoordinatorLayout>